--- a/WORK/index.html
+++ b/WORK/index.html
@@ -14,7 +14,7 @@
   <header class="imaging">
     <div class="container">
       <div class="row">
-        <h1 class="col mt-3 mb-3 cherta">Добро пожаловать!</h1>
+        <h1 class="col mt-3 mb-3 text-decoration-underline">Добро пожаловать!</h1>
       </div>
     </div>
   </header>
@@ -67,7 +67,7 @@
 
         <div class="col text-center">
           <audio controls>
-            <source src="music/la resaka-supermerk2.mp3">
+            <source src="music/Душистый_план_РЕМИКС_Fragrant_plan_REMIX.mp3">
           </audio>
         </div>
 
